--- a/GOOGLEPAGE-CLONE/styles/footer.css
+++ b/GOOGLEPAGE-CLONE/styles/footer.css
@@ -1,10 +1,33 @@
 .footer{
-    
     position: fixed;
     background-color:#f2f2f2;
     bottom: 0;
     left: 0;
     right: 0;
-    flex-shrink: 0;
-    box-sizing: border-box;
+}
+
+.footer a, p {
+    text-decoration: none;
+    color: #70757a;
+    font-size: 14px;
+    margin-right: 20px;
+}
+
+.footer-top{
+    padding: 10px 30px;
+    border-bottom: 1px solid rgb(218, 220, 224);
+    margin-bottom: 0;
+}
+
+.footer-bottom {
+    display: flex;  
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+    cursor: pointer;
+    flex-wrap: wrap;
+}
+
+.center img{
+    width: 15px;
 }
