--- a/3-COLUMN-CARD/styles/flex.css
+++ b/3-COLUMN-CARD/styles/flex.css
@@ -103,17 +103,37 @@ h3{
     margin: 0;
 }
 
-@media (max-width: 375px){
-    #SEDANS,
+@media screen and (max-width: 375px) {
+
+    #CAR-INFO {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
+        margin: 20px auto;
+        padding-left: 40px; 
+    }
+
+    button {
+        font-size: 10px;
+    }
+
+    header{
+        font-size: 12px;
+        width: 50%;
+        margin: auto;
+    }
+
+    h3{
+        font-size: 10px;
+        text-align: center;
+        margin-left: 20px;
+    }
+    
+        #SEDANS,
         #SUVS,
         #LUXURY {
-            width: 100%;
-            margin-top: 300px;
-            padding: 1em;
-            font-size: 12px;
-        }
-
-        button{
-            font-size: 10px;
+            border-radius: 0;
         }
 }
